--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,9 @@
 .app.dark {
   --bg-color: #3414d4;
+  --inverted-bg-color: #e8e8e8;
 
   --primary-color: #2d7707;
   --secondary-color: #57ec0a;
+  --inverted-primary-color: #092ba8;
+  --inverted-secondary-color: #0c4ac7;
 }
