--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,9 @@
 .app.light {
   --bg-color: #e8e8e8;
+  --inverted-bg-color: #3414d4;
 
   --primary-color: #092ba8;
   --secondary-color: #0c4ac7;
+  --inverted-primary-color: #2d7707;
+  --inverted-secondary-color: #57ec0a;
 }
