added babel and extract plugin

--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -2,7 +2,7 @@
   --bg-color: #e8e8e8;
   --inverted-bg-color: #3414d4;
 
-  --primary-color: #092ba8;
+  --primary-color: #980522;
   --secondary-color: #0c4ac7;
   --inverted-primary-color: #2d7707;
   --inverted-secondary-color: #57ec0a;
